# Creation-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  Task_List.md  assessment27.md  creation-engine  creation_export_file_list.txt  program_assessment.md  pyproject.toml  run_creation_engine_gui.bat  taskplanorder.md
assets/maps/: default.tileset.json  dungeon_ruins.json  forest_river.json  test_forest.json  test_map.json
assets/materials/: forest_soil.json  polished_gold.json  wet_stone.json
assets/textures/: test_checker.png.meta.json  test_lava.json  test_lava.png.meta.json  test_noise.png.meta.json
creation_engine/: __init__.py  asset_catalog.py  backend.py  cli.py  engine.py  game_rewritten_bundle.py  gui.py  narrative_tags.py  pack_builder.py  prompting.py  quality_check.py
creation_engine/export/: __init__.py  download_exporter.py  manifest_exporter.py  map_exporter.py  mesh_exporter.py  texture_exporter.py
creation_engine/map/: __init__.py  map_gen.py  tileset_specs.py
creation_engine/mesh/: __init__.py  mesh_builder.py  mesh_family_specs.py
creation_engine/texture/: __init__.py  material_presets.py  palette.py  texture_gen.py
docs/: docs_CREATION_ENGINE_STYLE_SUPPORT_TASK.md  ff-game-rewrite-plan.md  file-format-spec.md  lesson-plan.md  release_static_assets_checklist.md  tutorial.md
src/: AIAssist.cpp  AIAssist.h  AssetIO.cpp  AssetIO.h  MapEditor.cpp  MapEditor.h  Noise.cpp  Noise.h  TextureGenerator.cpp  TextureGenerator.h  main.cpp
tests/: run_tests.sh  test_backend_and_api.py  test_cli.py  test_gui.py  validate_assets  validate_assets.cpp
(+335 files in other folders)
